# Bianchi

./: .gitignore  CMakeLists.txt  main.c  output.txt  output2.txt  run.sh  sim_output.txt
PyScript/: parse.py
